--- a/contents/remainders/02-probabilities.qmd
+++ b/contents/remainders/02-probabilities.qmd
@@ -3,6 +3,7 @@ title: "Probabilités et Statistiques"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 ---
