--- a/include/biblio.bib
+++ b/include/biblio.bib
@@ -129,7 +129,7 @@
   abstract = {Data Preparation for Data Mining addresses an issue unfortunately ignored by most authorities on data mining: data preparation. Thanks largely to its perceived difficulty, data preparation has traditionally taken a backseat to the more alluring question of how best to extract meaningful knowledge. But without adequate preparation of your data, the return on the resources invested in mining is certain to be disappointing.Dorian Pyle corrects this imbalance. A twenty-five-year veteran of what has become the data mining industry, Pyle shares his own successful data preparation methodology, offering both a conceptual overview for managers and complete technical details for IT professionals. Apply his techniques and watch your mining efforts pay off-in the form of improved performance, reduced distortion, and more valuable results.On the enclosed CD-ROM, you'll find a suite of programs as C source code and compiled into a command-line-driven toolkit. This code illustrates how the author's techniques can be applied to arrive at an automated preparation solution that works for you. Also included are demonstration versions of three commercial products that help with data preparation, along with sample data with which you can practice and experiment. * Offers in-depth coverage of an essential but largely ignored subject.* Goes far beyond theory, leading you-step by step-through the author's own data preparation techniques.* Provides practical illustrations of the author's methodology using realistic sample data sets.* Includes algorithms you can apply directly to your own project, along with instructions for understanding when automation is possible and when greater intervention is required.* Explains how to identify and correct data problems that may be present in your application.* Prepares miners, helping them head into preparation with a better understanding of data sets and their limitations.},
   isbn = {978-1-55860-529-9},
   langid = {english},
-  keywords = {/unread,Computers / Artificial Intelligence / General,Computers / Data Science / Data Analytics,Computers / Database Administration & Management},
+  keywords = {Computers / Artificial Intelligence / General,Computers / Data Science / Data Analytics,Computers / Database Administration & Management},
   file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Pyle - 1999 - Data Preparation for Data Mining.pdf}
 }
 
