--- a/contents/03-generalities.en.qmd
+++ b/contents/03-generalities.en.qmd
@@ -6,3 +6,24 @@ format:
     header-includes:
       - \usepackage{mathtools} 
 --- 
+
+* Slides: [link](../slides/03-generalites-slides.qmd)
+
+* TD: [link](../td/03-generalites-td.qmd)
+
+* TP: [link](../td/03-generalites-tp.qmd)
+
+## Outline 
+
+1. [Data analysis project](./generalities/01-stat.qmd)
+
+2. [Spaces](./generalities/02-spaces.qmd)
+
+3. [Distances](./generalities/03-distance.qmd)
+
+4. [Bias / Variance](./generalities/04-bias-variance.qmd)
+
+5. [Model evaluation](./generalities/05-model-evaluation.qmd)
+
+![Correlation ([xkcd:552](https://xkcd.com/552/)).](../include/correlation.png)
+
