--- a/contents/misc/good-practices.qmd
+++ b/contents/misc/good-practices.qmd
@@ -31,7 +31,9 @@ La maintenance d'un code est basé sur trois principes: son versionnage, sa comp
 
 Le principe du versionnage est d'utiliser un logiciel qui enregistre les différentes modifications faites sur le code. Le plus connu est **Git**. Il permet de naviguer entre les différentes versions de votre code, de créer plusieurs versions (appelée branches), de collaborer à plusieurs sur un même code. C'est vraiment un indispensable à avoir dans sa panoplie. Le versionnage peut ensuite être enregistré sur Github qui gère la machinerie sous-jacente. À titre d'exemple, ce site utilise Git et Github pour son versionnage et vous pouvez voir les différentes versions [ici](https://github.com/StevenGolovkine/UL-STT2200/commits/main/).
 
-Un code compréhensible est clair et se lit bien (presque comme du texte). Il comporte souvent des instructions qui parlent d’elles-mêmes. Ces instructions sont typiquement succinctes, car une instruction trop longue effectue souvent plusieurs tâches difficilement discernables. Si la lecture d’une instruction ne permet pas à un programmeur initié dans le langage informatique employé de comprendre ce qu’elle réalise, il est alors recommandé d’insérer un commentaire dans le code pour expliquer à quoi sert l’instruction. En plus de commentaires pour expliquer certains instructions, toutes fonctions devraient être documentées. La documentation d'une fonction devrait contenir: un texte explicatif de ce que fait la fonction, une description des arguments acceptés en entrée, une description des résultats produits et un exemple d'utilisation. Lorsque que l'on programme, il est aussi de bon ton de suivre un **guide de style**. Un guide de style est un ensemble de règles sur lesquelles les développeurs se sont mis d'accord et qui permet d'avoir une syntaxe similaire à travers les différents projets. En R, vous pouvez utiliser le guide de style du [tidyverse](https://style.tidyverse.org). En Python, vous pouvez utiliser le guide de style [PEP8](https://peps.python.org/pep-0008/) écrit par le créateur de Python. Et en Julia, vous pouvez utiliser le guide de style fournit avec le [manuel du langage](https://docs.julialang.org/en/v1/manual/style-guide/). Vous pouvez utiliser un **linter**, un outil d'analyse de code statique pour vous aidez à respecter ces guides de styles. À noter que ces guides de style sont des récommendations et il n'y a rien d'obligatoire à les suivre. Certaines règles se contredisant, je vous recommanderai même de ne pas en suivre certaines.  
+Un code compréhensible est clair et se lit bien (presque comme du texte). Il comporte souvent des instructions qui parlent d’elles-mêmes. Ces instructions sont typiquement succinctes, car une instruction trop longue effectue souvent plusieurs tâches difficilement discernables. Si la lecture d’une instruction ne permet pas à un programmeur initié dans le langage informatique employé de comprendre ce qu’elle réalise, il est alors recommandé d’insérer un commentaire dans le code pour expliquer à quoi sert l’instruction. En plus de commentaires pour expliquer certains instructions, toutes fonctions devraient être documentées. La documentation d'une fonction devrait contenir: un texte explicatif de ce que fait la fonction, une description des arguments acceptés en entrée, une description des résultats produits et un exemple d'utilisation. Lorsque que l'on programme, il est aussi de bon ton de suivre un **guide de style**. Un guide de style est un ensemble de règles sur lesquelles les développeurs se sont mis d'accord et qui permet d'avoir une syntaxe similaire à travers les différents projets. En R, vous pouvez utiliser le guide de style du [tidyverse](https://style.tidyverse.org). En Python, vous pouvez utiliser le guide de style [PEP8](https://peps.python.org/pep-0008/) écrit par le créateur de Python. Et en Julia, vous pouvez utiliser le guide de style fournit avec le [manuel du langage](https://docs.julialang.org/en/v1/manual/style-guide/). Vous pouvez utiliser un **linter**, un outil d'analyse de code statique pour vous aidez à respecter ces guides de styles. À noter que ces guides de style sont des recommendations et il n'y a rien d'obligatoire à les suivre. Certaines règles se contredisant, je vous recommanderai même de ne pas en suivre certaines.
+
+La façon la plus commune d'avoir un code facile à réutiliser est d'en faire des fonctions que l'on peut ensuite partager à travers un package.
 
 ## Objectif 3 : Code suffisamment rapide
 
@@ -43,7 +45,7 @@ Après nous être assurés que notre code fonctionne correctement et qu’il est
 - parfois programmer des bouts de code dans un autre langage plus bas niveau. 
 
 
-## Résumé
+## En résumé
 
 En résumer, pour adopter de bonnes pratiques de programmation, il faut :
 
