--- a/contents/remainders/03-programming.en.qmd
+++ b/contents/remainders/03-programming.en.qmd
@@ -3,6 +3,7 @@ title: "Programming"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 --- 
