--- a/contents/remainders/03-programming.qmd
+++ b/contents/remainders/03-programming.qmd
@@ -20,19 +20,13 @@ Voici un guide qui présente les bases de R: [Apprendre R en Y minutes](https://
 
 Python est un langage de programmation généraliste. Il est gratuit, open-source et disponible sur Windows, macOS et Linux. Bien que généraliste, il y a une importante communauté autour du l'analyse de données, machine learning en Python. Ainsi, les méthodes usuelles ont déjà été implementées, e.g. dans le package [sklearn](https://scikit-learn.org/stable/), mais si besoin, il est possible d'aller voir le code pour le modifier. 
 
-Voici un guide qui présente les bases de Python: [Apprendre Python en Y minutes](https://learnxinyminutes.com/fr/python/).
-
-
-[Bonnes pratiques en Python]()
-
+Voici un guide qui présente les bases de Python: [Apprendre Python en Y minutes](https://learnxinyminutes.com/fr/python/) et un guide de [bonnes pratiques en Python](../misc/good-practices-python.qmd).
 
 ## Julia
 
 Julia est aussi un langage de programmation généraliste. C'est un langage bien plus récent que ses deux compères, R et Python (début des années 2010 pour Julia vs. début des années 1990 pour R et Python). Il peut donc sembler moins mature sur certains points, mais la plupart des méthodes d'analyse de données classiques ont été implémentées. De même que R et Python, ce langage est gratuit, open-source et disponible sur les principaux systèmes d'exploitation. Julia a l'avantage d'être plus rapide que R et Python. Il inclut aussi un support natif d'appel à des librairies en C ou en Fortran, et un support non-natif d'appel à des librairies en R et Python.
 
-Voici un guide qui présente les bases de Julia: [Learn Julia in Y minutes](https://learnxinyminutes.com/julia/) (il n'y a pas de version française pour l'instant).
-
-[Bonnes pratiques en Julia]()
+Voici un guide qui présente les bases de Julia: [Learn Julia in Y minutes](https://learnxinyminutes.com/julia/) (il n'y a pas de version française pour l'instant) et un guide de [bonnes pratiques en Julia](https://modernjuliaworkflows.org) (en anglais).
 
 ## SAS 
 
