--- a/td/02-revision-td.qmd
+++ b/td/02-revision-td.qmd
@@ -8,4 +8,43 @@ format:
       - \usepackage{mathtools} 
 ---
 
+## Un problème de vélo
 
+Dans ce problème, on cherche à modéliser la répartition des vélos en libre service dans les différentes stations de l'université Laval. Le campus comporte cinq stations pouvant acceuillir un total de $136$ vélos ([lien](https://www.sc.ulaval.ca/mobilite-durable/se-deplacer-a-velo#:~:text=àVélo,l'avenue%20de%20la%20Médecine)):
+
+* Abitibi-Prince (ABP)
+
+* Alphone-Desjardins (ADJ)
+
+* Charles-De Koninck (DKN)
+
+* Ferdinand-Vandry (VND)
+
+* PEPS 
+
+Supposons que tous les vélos sont retournés à une des cinq stations à la fin de la journée, i.e. pour chaque jour, il y a un moment dans la journée (par exemple, à minuit), où tous les vélos sont à une certaine station. Nous pouvons donc nous intéresser à ces stations à ce moment de la journée pour chaque jour. Nous cherchons à modéliser les movements des vélos de minuit pour un jour donné jusqu'à minuit du jour suivant. Nous trouvons que :
+
+* pour les vélos empruntés à ABP, $50\%$ y retourne, $10\%$ vont à ADJ, $20\%$ vont à DKN et $20\%$ vont à VND.
+
+* pour les vélos empruntés à ADJ, $30\%$ y retourne, $10\%$ vont à ABP, $10\%$ vont à DKN, $10\%$ vont à VND et $40\%$ vont au PEPS.
+
+* pour les vélos empruntés à DKN, $80\%$ y retourne, $5\%$ vont à ADJ, et $15\%$ vont au PEPS.
+
+* pour les vélos empruntés à VND, $50\%$ y retourne, $20\%$ vont à ABP, $5\%$ vont à ADJ, $15\%$ vont à DKN et $10\%$ vont au PEPS.
+
+* pour les vélos empruntés au PEPS, $0\%$ y retourne, $25\%$ vont à ABP, $25\%$ vont à ADJ, $25\%$ vont à DKN et $25\%$ vont à VND.
+
+1. Faire un graphe de la situation. 
+
+2. Écrire la matrice $T$ tel que chaque entrée $t_{ij}$ corresponde à la probabilité de passer de la station $i$ à la station $j$, $i, j \in \{ \text{ABP}, \text{ADJ}, \text{DKN}, \text{VND}, \text{PEPS} \}$. On appelle cette matrice, la matrice de transition.
+
+3. Quelle est la probabilité qu'un vélo soit à la station PEPS au jour 2 sachant qu'il était à la station ADJ au début ?
+
+4. Supposons qu'il y ait $20$ vélos à ABP, $35$ vélos à ADJ, $26$ vélos à DKN, $45$ à VND et $10$ au PEPS. En utilisant une diagonalisation de la matrice $T$, donner la répartition des vélos après $10$ jours. 
+
+
+## Paradoxe des deux enfants
+
+On cherche à modéliser les probabilités d'avoir des enfants d'un certain sexe. Dans toutes les questions, les enfants sont soit de sexe masculin, soit de sexe féminin, de façon équiprobable.
+
+1. 
