--- a/td/02-revision-td.qmd
+++ b/td/02-revision-td.qmd
@@ -47,4 +47,10 @@ Supposons que tous les vélos sont retournés à une des cinq stations à la fin
 
 On cherche à modéliser les probabilités d'avoir des enfants d'un certain sexe. Dans toutes les questions, les enfants sont soit de sexe masculin, soit de sexe féminin, de façon équiprobable.
 
-1. 
+1. M. Gagnon a deux enfants. L'enfant aîné est une fille. Quelle est la probabilité que son deuxième enfant soit aussi une fille ?
+
+2. Mme Tremblay a deux enfants. On lui pose la question suivante : "Avez-vous au moins un garçon ?" et elle répond : "Oui". Quelle est la probabilité que les deux enfants soient des garçons ? 
+
+3. Est-ce que la probabilité de Mme Tremblay d'avoir deux garçons change si on lui pose la question suivante : "Indiquez moi le sexe de l'un de vos enfants." et qu'elle répond : "J'ai (au moins) un garçon." ?
+
+4. On croise M. Gagnon dans la rue en train de se balader avec sa fille. On lui demande quel jour de la semaine elle est née. Elle nous répond: "Vendredi". Quelle est la probabilité que son deuxième enfant soit aussi une fille ?
