--- a/td/02-revision-td.qmd
+++ b/td/02-revision-td.qmd
@@ -10,17 +10,7 @@ format:
 
 ## Un problème de vélo
 
-Dans ce problème, on cherche à modéliser la répartition des vélos en libre service dans les différentes stations de l'université Laval. Le campus comporte cinq stations pouvant acceuillir un total de $136$ vélos ([lien](https://www.sc.ulaval.ca/mobilite-durable/se-deplacer-a-velo#:~:text=àVélo,l'avenue%20de%20la%20Médecine)):
-
-* Abitibi-Prince (ABP)
-
-* Alphone-Desjardins (ADJ)
-
-* Charles-De Koninck (DKN)
-
-* Ferdinand-Vandry (VND)
-
-* PEPS 
+Dans ce problème, on cherche à modéliser la répartition des vélos en libre service dans les différentes stations de l'université Laval. Le campus comporte cinq stations pouvant acceuillir un total de $136$ vélos ([lien](https://www.sc.ulaval.ca/mobilite-durable/se-deplacer-a-velo#:~:text=àVélo,l'avenue%20de%20la%20Médecine)): Abitibi-Prince (ABP), Alphone-Desjardins (ADJ), Charles-De Koninck (DKN), Ferdinand-Vandry (VND) et PEPS.
 
 Supposons que tous les vélos sont retournés à une des cinq stations à la fin de la journée, i.e. pour chaque jour, il y a un moment dans la journée (par exemple, à minuit), où tous les vélos sont à une certaine station. Nous pouvons donc nous intéresser à ces stations à ce moment de la journée pour chaque jour. Nous cherchons à modéliser les movements des vélos de minuit pour un jour donné jusqu'à minuit du jour suivant. Nous trouvons que :
 
@@ -54,3 +44,27 @@ On cherche à modéliser les probabilités d'avoir des enfants d'un certain sexe
 3. Est-ce que la probabilité de Mme Tremblay d'avoir deux garçons change si on lui pose la question suivante : "Indiquez moi le sexe de l'un de vos enfants." et qu'elle répond : "J'ai (au moins) un garçon." ?
 
 4. On croise M. Gagnon dans la rue en train de se balader avec sa fille. On lui demande quel jour de la semaine elle est née. Elle nous répond: "Vendredi". Quelle est la probabilité que son deuxième enfant soit aussi une fille ?
+
+## La loi d'Ohm 
+
+On cherche à calculer la valeur d'un résistance. Pour cela, on lui envoie un courant électrique (intensité en ampères, A) et on mesure la différence de potentiel entre les bornes de la résistance (tension en volt, V). On trouve les valeurs suivantes :
+
+| Intensité (A) | Voltage (V) |
+| ------------: | ----------: |
+| 0.2           | 4.0         |
+| 0.5           | 10.4        |
+| 0.9           | 18.7        |
+| 1.0           | 21.1        |
+| 1.2           | 25.1        |
+| 1.3           | 27.4        |
+| 1.8           | 37.8        |
+
+1. Calculer l'intensité moyenne et le voltage moyen.
+
+2. Calculer les variances de l'intensité et du voltage.
+
+3. Calculer la covariance entre l'intensité et le voltage.
+
+4. La loi d'Ohm nous dit que l'intensité et le voltage sont proportionnelle suivant la relation $V = R A$ où $R$ est la valeur de la résistance en Ohm. Cette relation est équivalente à estimer un modèle linéaire entre l'intensité et le voltage. La résistance $R$ est donc donnée par le ratio entre la covariance entre l'intensité et le voltage et la variance de l'intensité (cf. cours de régression pour une preuve). Calculer la valeur de $R$. 
+
+5. En reprenant les valeurs du tableau, vérifier la valeur de $R$. Pourquoi est-ce que l'on ne retrouve pas exactement les valeurs données ?
